# ansible-role-logscale

./: README.md  pyproject.toml
defaults/: main.yml
handlers/: main.ansible.yml  main.yml
meta/: main.ansible.yml
tasks/: install.yml  main.yml  user.yml
templates/: kafka.properties.j2  logscale.j2  logscale.service.j2  server.conf.j2
vars/: main.yml
